--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl http2 default_server;
     listen [::]:443 ssl http2 default_server;
 
-    server_name urbanlabs.ru www.urbanlabs.ru;
+    server_name urbanlabs.ru;
 
     ssl_certificate         /etc/letsencrypt/live/urbanlabs/fullchain.pem;
     ssl_certificate_key     /etc/letsencrypt/live/urbanlabs/privkey.pem;
@@ -27,7 +27,7 @@ server {
     listen 443 ssl http2 default_server;
     listen [::]:443 ssl http2 default_server;
 
-    server_name online.urbanlabs.ru www.online.urbanlabs.ru;
+    server_name online.urbanlabs.ru;
 
     ssl_certificate         /etc/letsencrypt/live/urbanlabs/fullchain.pem;
     ssl_certificate_key     /etc/letsencrypt/live/urbanlabs/privkey.pem;
